--- a/package.json
+++ b/package.json
@@ -8,7 +8,23 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+        "babel-core": "^6.1.2",
+        "babel-loader": "^6.1.0",
+        "babel-plugin-transform-runtime": "^6.1.2",
+        "babel-preset-es2015": "^6.1.2",
+        "babel-preset-stage-0": "^6.1.2",
+        "babel-runtime": "^5.8.0",
+        "webpack": "^1.12.2",
+        "css-loader": "^0.23.0",
+        "style-loader": "^0.13.0",
+        "vue-loader": "^7.3.0",
+        "vue-html-loader": "^1.0.0"
+  },
   "dependencies": {
-    "mime": "^1.3.4"
+    "element-ui": "^1.0.0-rc.7",
+    "mime": "^1.3.4",
+    "vue": "^1.0.26"
   }
+  
 }
