--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "element-ui": "^1.0.0-rc.7",
     "mime": "^1.3.4",
+    "multiparty": "^4.1.2",
     "vue": "^1.0.26"
   }
 }
